Update README and Interlink.csproj for v1.2.0 release
- Updated README.md to reflect the release of version 1.2.0, including the introduction of the `IRequestPostProcessor<TRequest, TResponse>` interface and pre/post hooks for the request lifecycle.
- Marked upcoming version 1.3.0 with planned features for performance improvements and customization.
- Modified Interlink.csproj to add properties for documentation generation and symbol management.

--- a/src/Interlink/Interlink.csproj
+++ b/src/Interlink/Interlink.csproj
@@ -15,6 +15,10 @@
 	<PackageProjectUrl>https://github.com/manusoft/Interlink-cqrs-library</PackageProjectUrl>
 	<RepositoryUrl>https://github.com/manusoft/Interlink-cqrs-library</RepositoryUrl>
 	<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<IncludeSymbols>true</IncludeSymbols>
+	<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	<EmbedUntrackedSources>true</EmbedUntrackedSources>
 	<Icon>icon.png</Icon>
 	<PackageIcon>icon.png</PackageIcon>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
